 - Fixed a few minor mem leaks in the server and user list.
 - Changes to: UrlGrabber, Notify, Plugins, Ignore and Banlist GUIs.
   Changed GtkCList to GtkTreeview, and general enhancement to these
   guis (Vincent Ho).
 - win32: made it possible to compile with ipv6.
 - Added /MOP.
 - Fixed pageup/pagedown wrong window bug [710784].
 - Fixed no timestamps in top-level windows bug [710787].
 - 
 - 


----------------------------------------------------------------------
 2.0.1
----------------------------------------------------------------------

 - Updated translations (am, ca, lt).
 - Save serverlist before connecting (Joe Drew).
 - OpenBSD compile fixes.
 - (Encoding) Fallback outgoing text to "?" for unconvertable chars.
   [674798].
 - Hide tab scrolling buttons when they're not needed.
 - Fixed --disable-xlib compiles.
 - Fixed use of %h in dialog-tab buttons [688937].
 - Fixed printing/logging timestamps that contain invalid utf8
   [688548].
 - Added "Resizable userlist" option (default ON).
 - Strip colors on topic change.
 - Fixed (snotice) and (notice) tabs being swapped [687437].
 - Made more strings translatable.
 - Allow loading empty text events [691191].
 - Fixed xtext race condition [678874].
 - Added ability to show/hide the channel-mode buttons (default OFF).
 - Use the network name in server-tab rather than full hostname.
 - Added keybindings for moving tab-families, default is ctrl-shift
   PageUp and PageDown (Vincent Ho).
 - Added 'Beep on highlighted messages' option (Jirka Kosina).
 - Use DND to detach tabs.
 - Interpret %C, %B etc in quit reasons.
 - Added more items to the right-click tab menu.
 - Some misc UI cleanups.


----------------------------------------------------------------------
 2.0.0
----------------------------------------------------------------------

 - Updated translations (de, es, lt, nl, sk, sl).
 - Fixed half cut off dates in notify window.
 - Fixed tabs loosing red/blue color when being renamed.