@@ -15,7 +15,8 @@
  - Added /MOP.
  - Fixed pageup/pagedown wrong window bug [710784].
  - Fixed no timestamps in top-level windows bug [710787].
- - 
+ - Fixed first word being skipped in perl add_command_handler("", cb);
+   [711802].
  - 
 
 
